# SimpleRenderEngine

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindGLEW.cmake  FindSDL2.cmake  FindSDL2_IMAGE.cmake
examples/: 05_obj-viewer.cpp  09_picking.cpp  CMakeLists.txt
include/sre/: Shader.hpp
src/sre/: Inspector.cpp  imgui_sre.cpp
submodules/: CMakeLists.txt
test/: CMakeLists.txt
